# pdm

./: Cargo.toml  dummy.toml
config/: config.toml
src/: app.rs  config.rs  lib.rs  main.rs  p2poolv2_config_parser.rs  ui.rs
src/components/: difficulty.rs  file_explorer.rs  metrics.rs  mod.rs  p2pool_client.rs  p2pool_log_parser.rs  p2pool_status_view.rs  p2pool_websocket.rs  p2pool_websockets.rs  status_bar.rs
src/snapshots/: pdm__tests__home_screen.snap  pdm__tests__menu_toggled.snap  pdm__ui__tests__bitcoin_screen_render.snap  pdm__ui__tests__p2pool_screen_render.snap  pdm__ui__tests__p2pool_status_screen_render.snap
src/ui/: bitcoin.rs  file_explorer.rs  home.rs  mod.rs  p2poolv2.rs
src/ui/snapshots/: pdm__ui__tests__bitcoin_screen_render.snap  pdm__ui__tests__home_screen_render.snap  pdm__ui__tests__p2pool_screen_render.snap
tests/snapshots/: ui_snapshots__config_screen_render.snap  ui_snapshots__home_screen_render.snap
