[package]
name = "pdm"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "AGPLv3"

[dependencies]
anyhow = "1.0.100"
config = "0.15.19"
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
bitcoin = "0.31"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["blocking"] }

[dev-dependencies]
insta = "1.44.3"
tempfile = "3"
