[package]
name = "pdm"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "AGPLv3"

[dependencies]
anyhow = "1.0.100"
config = "0.15.19"
crossterm = "0.29.0"
directories = "6.0.0"
ratatui = "0.30.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
unicode-width = "0.2"
p2poolv2_config = { git = "https://github.com/p2poolv2/p2poolv2", package = "p2poolv2_config" }
p2poolv2_api = { git = "https://github.com/p2poolv2/p2poolv2", package = "p2poolv2_api" }
bitcoin = "0.32.5"
toml_edit = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = "1.0.135"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"
url = "2"
chrono = "0.4.44"
base64 = "0.22.1"

[dev-dependencies]
insta = "1.44.3"
serial_test = "3"
tempfile = "3"
